// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spacing and grid > resolves as expected on phone large 430x932 1`] = `
{
  "#four-baggers-screen padding": "5px",
  "#game-history-screen padding": "5px",
  "#game-screen gap": "6px",
  "#game-screen grid-template-rows": "auto auto auto auto auto auto",
  "#game-screen padding": "4px",
  "#iro-picker min-height": "270px",
  "#players-screen padding": "5px",
  ".bottom-bar border-radius": "14px",
  ".bottom-bar gap": "5px",
  ".bottom-bar grid-template-columns": "38px 1fr 38px",
  ".bottom-bar height": "60px",
  ".bottom-bar padding": "0 3px",
  ".color-preview min-height": "42px",
  ".entry-btn border-radius": "9px",
  ".entry-btn min-height": "0",
  ".entry-card gap": "4px",
  ".entry-grid --entry-btn-height": "clamp(32px, 4.6dvh, 40px)",
  ".entry-grid gap": "3px",
  ".entry-mode button border-radius": "12px",
  ".entry-mode button min-height": "60px",
  ".entry-mode gap": "4px",
  ".entry-panel border-radius": "12px",
  ".entry-panel gap": "3px",
  ".entry-panel padding": "4px",
  ".entry-panels gap": "4px",
  ".header min-height": "52px",
  ".header padding": "6px 10px",
  ".history-card border-radius": "14px",
  ".history-card gap": "3px",
  ".history-card height": "92px",
  ".history-card max-height": "92px",
  ".history-card min-height": "92px",
  ".history-card padding": "4px",
  ".history-scroller gap": "6px",
  ".history-scroller height": "auto",
  ".history-scroller min-height": "0",
  ".icon-btn border-radius": "10px",
  ".icon-btn height": "34px",
  ".last-point-card border-radius": "12px",
  ".last-point-card column-gap": "6px",
  ".last-point-card grid-template-columns": "minmax(0, 1fr) auto auto",
  ".last-point-card grid-template-rows": "auto 1fr",
  ".last-point-card min-height": "60px",
  ".last-point-card padding": "4px 8px",
  ".last-point-card row-gap": "3px",
  ".mini-btn height": "30px",
  ".mini-btn min-width": "30px",
  ".modal max-height": "min(90dvh, 720px)",
  ".pill border-radius": "999px",
  ".pill min-height": "30px",
  ".pill padding": "0 8px",
  ".primary-btn border-radius": "13px",
  ".primary-btn height": "56px",
  ".primary-btn min-height": "56px",
  ".round-chip border-radius": "12px",
  ".round-chip min-width": "52px",
  ".round-chip-head padding": "3px 0",
  ".round-chip-score padding": "4px 0",
  ".score-box border-radius": "18px",
  ".score-box min-height": "clamp(138px, 18dvh, 164px)",
  ".score-box padding": "0 4px",
  ".score-boxes gap": "4px",
  ".scoreboards gap": "4px",
  ".team-card border-radius": "14px",
  ".team-card min-height": "96px",
  ".team-card padding": "7px",
  ".team-player line-height": "1",
  ".team-player2 line-height": "1",
}
`;

exports[`spacing and grid > resolves as expected on phone short 390x760 1`] = `
{
  "#four-baggers-screen padding": "5px",
  "#game-history-screen padding": "5px",
  "#game-screen gap": "5px",
  "#game-screen grid-template-rows": "auto auto auto auto auto auto",
  "#game-screen padding": "3px",
  "#iro-picker min-height": "240px",
  "#players-screen padding": "5px",
  ".bottom-bar border-radius": "14px",
  ".bottom-bar gap": "5px",
  ".bottom-bar grid-template-columns": "38px 1fr 38px",
  ".bottom-bar height": "56px",
  ".bottom-bar padding": "0 3px",
  ".color-preview min-height": "42px",
  ".entry-btn border-radius": "9px",
  ".entry-btn min-height": "0",
  ".entry-card gap": "4px",
  ".entry-grid --entry-btn-height": "clamp(28px, 4.2dvh, 34px)",
  ".entry-grid gap": "3px",
  ".entry-mode button border-radius": "12px",
  ".entry-mode button min-height": "56px",
  ".entry-mode gap": "4px",
  ".entry-panel border-radius": "12px",
  ".entry-panel gap": "3px",
  ".entry-panel padding": "4px",
  ".entry-panels gap": "4px",
  ".header min-height": "46px",
  ".header padding": "5px 9px",
  ".history-card border-radius": "14px",
  ".history-card gap": "3px",
  ".history-card height": "92px",
  ".history-card max-height": "92px",
  ".history-card min-height": "92px",
  ".history-card padding": "4px",
  ".history-scroller gap": "6px",
  ".history-scroller height": "auto",
  ".history-scroller min-height": "0",
  ".icon-btn border-radius": "10px",
  ".icon-btn height": "34px",
  ".last-point-card border-radius": "12px",
  ".last-point-card column-gap": "6px",
  ".last-point-card grid-template-columns": "minmax(0, 1fr) auto auto",
  ".last-point-card grid-template-rows": "auto 1fr",
  ".last-point-card min-height": "56px",
  ".last-point-card padding": "3px 7px",
  ".last-point-card row-gap": "3px",
  ".mini-btn height": "30px",
  ".mini-btn min-width": "30px",
  ".modal max-height": "92dvh",
  ".pill border-radius": "999px",
  ".pill min-height": "28px",
  ".pill padding": "0 8px",
  ".primary-btn border-radius": "13px",
  ".primary-btn height": "52px",
  ".primary-btn min-height": "52px",
  ".round-chip border-radius": "12px",
  ".round-chip min-width": "52px",
  ".round-chip-head padding": "3px 0",
  ".round-chip-score padding": "4px 0",
  ".score-box border-radius": "18px",
  ".score-box min-height": "clamp(116px, 16.2dvh, 136px)",
  ".score-box padding": "0 4px",
  ".score-boxes gap": "4px",
  ".scoreboards gap": "4px",
  ".team-card border-radius": "14px",
  ".team-card min-height": "81px",
  ".team-card padding": "5px",
  ".team-player line-height": "1",
  ".team-player2 line-height": "1",
}
`;

exports[`spacing and grid > resolves as expected on phone tall 390x844 1`] = `
{
  "#four-baggers-screen padding": "5px",
  "#game-history-screen padding": "5px",
  "#game-screen gap": "6px",
  "#game-screen grid-template-rows": "auto auto auto auto auto auto",
  "#game-screen padding": "4px",
  "#iro-picker min-height": "270px",
  "#players-screen padding": "5px",
  ".bottom-bar border-radius": "14px",
  ".bottom-bar gap": "5px",
  ".bottom-bar grid-template-columns": "38px 1fr 38px",
  ".bottom-bar height": "60px",
  ".bottom-bar padding": "0 3px",
  ".color-preview min-height": "42px",
  ".entry-btn border-radius": "9px",
  ".entry-btn min-height": "0",
  ".entry-card gap": "4px",
  ".entry-grid --entry-btn-height": "clamp(32px, 4.6dvh, 40px)",
  ".entry-grid gap": "3px",
  ".entry-mode button border-radius": "12px",
  ".entry-mode button min-height": "60px",
  ".entry-mode gap": "4px",
  ".entry-panel border-radius": "12px",
  ".entry-panel gap": "3px",
  ".entry-panel padding": "4px",
  ".entry-panels gap": "4px",
  ".header min-height": "52px",
  ".header padding": "6px 10px",
  ".history-card border-radius": "14px",
  ".history-card gap": "3px",
  ".history-card height": "92px",
  ".history-card max-height": "92px",
  ".history-card min-height": "92px",
  ".history-card padding": "4px",
  ".history-scroller gap": "6px",
  ".history-scroller height": "auto",
  ".history-scroller min-height": "0",
  ".icon-btn border-radius": "10px",
  ".icon-btn height": "34px",
  ".last-point-card border-radius": "12px",
  ".last-point-card column-gap": "6px",
  ".last-point-card grid-template-columns": "minmax(0, 1fr) auto auto",
  ".last-point-card grid-template-rows": "auto 1fr",
  ".last-point-card min-height": "60px",
  ".last-point-card padding": "4px 8px",
  ".last-point-card row-gap": "3px",
  ".mini-btn height": "30px",
  ".mini-btn min-width": "30px",
  ".modal max-height": "min(90dvh, 720px)",
  ".pill border-radius": "999px",
  ".pill min-height": "30px",
  ".pill padding": "0 8px",
  ".primary-btn border-radius": "13px",
  ".primary-btn height": "56px",
  ".primary-btn min-height": "56px",
  ".round-chip border-radius": "12px",
  ".round-chip min-width": "52px",
  ".round-chip-head padding": "3px 0",
  ".round-chip-score padding": "4px 0",
  ".score-box border-radius": "18px",
  ".score-box min-height": "clamp(138px, 18dvh, 164px)",
  ".score-box padding": "0 4px",
  ".score-boxes gap": "4px",
  ".scoreboards gap": "4px",
  ".team-card border-radius": "14px",
  ".team-card min-height": "96px",
  ".team-card padding": "7px",
  ".team-player line-height": "1",
  ".team-player2 line-height": "1",
}
`;

exports[`spacing and grid > resolves as expected on small phone 360x640 1`] = `
{
  "#four-baggers-screen padding": "5px",
  "#game-history-screen padding": "5px",
  "#game-screen gap": "5px",
  "#game-screen grid-template-rows": "auto auto auto auto auto auto",
  "#game-screen padding": "3px",
  "#iro-picker min-height": "240px",
  "#players-screen padding": "5px",
  ".bottom-bar border-radius": "14px",
  ".bottom-bar gap": "5px",
  ".bottom-bar grid-template-columns": "38px 1fr 38px",
  ".bottom-bar height": "56px",
  ".bottom-bar padding": "0 3px",
  ".color-preview min-height": "42px",
  ".entry-btn border-radius": "9px",
  ".entry-btn min-height": "0",
  ".entry-card gap": "4px",
  ".entry-grid --entry-btn-height": "clamp(28px, 4.2dvh, 34px)",
  ".entry-grid gap": "3px",
  ".entry-mode button border-radius": "12px",
  ".entry-mode button min-height": "56px",
  ".entry-mode gap": "4px",
  ".entry-panel border-radius": "12px",
  ".entry-panel gap": "3px",
  ".entry-panel padding": "4px",
  ".entry-panels gap": "4px",
  ".header min-height": "46px",
  ".header padding": "5px 9px",
  ".history-card border-radius": "14px",
  ".history-card gap": "3px",
  ".history-card height": "92px",
  ".history-card max-height": "92px",
  ".history-card min-height": "92px",
  ".history-card padding": "4px",
  ".history-scroller gap": "6px",
  ".history-scroller height": "auto",
  ".history-scroller min-height": "0",
  ".icon-btn border-radius": "10px",
  ".icon-btn height": "34px",
  ".last-point-card border-radius": "12px",
  ".last-point-card column-gap": "6px",
  ".last-point-card grid-template-columns": "minmax(0, 1fr) auto auto",
  ".last-point-card grid-template-rows": "auto 1fr",
  ".last-point-card min-height": "56px",
  ".last-point-card padding": "3px 7px",
  ".last-point-card row-gap": "3px",
  ".mini-btn height": "30px",
  ".mini-btn min-width": "30px",
  ".modal max-height": "92dvh",
  ".pill border-radius": "999px",
  ".pill min-height": "28px",
  ".pill padding": "0 8px",
  ".primary-btn border-radius": "13px",
  ".primary-btn height": "52px",
  ".primary-btn min-height": "52px",
  ".round-chip border-radius": "12px",
  ".round-chip min-width": "52px",
  ".round-chip-head padding": "3px 0",
  ".round-chip-score padding": "4px 0",
  ".score-box border-radius": "18px",
  ".score-box min-height": "clamp(116px, 16.2dvh, 136px)",
  ".score-box padding": "0 4px",
  ".score-boxes gap": "4px",
  ".scoreboards gap": "4px",
  ".team-card border-radius": "14px",
  ".team-card min-height": "81px",
  ".team-card padding": "5px",
  ".team-player line-height": "1",
  ".team-player2 line-height": "1",
}
`;

exports[`spacing and grid > resolves as expected on tablet 768x1024 1`] = `
{
  "#four-baggers-screen padding": "6px",
  "#game-history-screen padding": "6px",
  "#game-screen gap": "6px",
  "#game-screen grid-template-rows": "auto auto auto auto minmax(0, 1fr)",
  "#game-screen padding": "6px",
  "#iro-picker min-height": "270px",
  "#players-screen padding": "6px",
  ".bottom-bar border-radius": "16px",
  ".bottom-bar gap": "2px",
  ".bottom-bar grid-template-columns": "34px 1fr 34px",
  ".bottom-bar height": "34px",
  ".bottom-bar padding": "0 4px",
  ".color-preview min-height": "46px",
  ".entry-btn border-radius": "12px",
  ".entry-btn min-height": "0",
  ".entry-card gap": "8px",
  ".entry-grid --entry-btn-height": "58px",
  ".entry-grid gap": "6px",
  ".entry-mode button border-radius": "12px",
  ".entry-mode button min-height": "40px",
  ".entry-mode gap": "6px",
  ".entry-panel border-radius": "var(--radius)",
  ".entry-panel gap": "8px",
  ".entry-panel padding": "8px",
  ".entry-panels gap": "8px",
  ".header min-height": null,
  ".header padding": "10px 14px 8px",
  ".history-card border-radius": "var(--radius)",
  ".history-card gap": "4px",
  ".history-card height": "auto",
  ".history-card max-height": null,
  ".history-card min-height": "72px",
  ".history-card padding": "4px",
  ".history-scroller gap": "8px",
  ".history-scroller height": "auto",
  ".history-scroller min-height": "0",
  ".icon-btn border-radius": "12px",
  ".icon-btn height": "40px",
  ".last-point-card border-radius": "14px",
  ".last-point-card column-gap": "8px",
  ".last-point-card grid-template-columns": "minmax(0, 1fr) auto",
  ".last-point-card grid-template-rows": "auto 1fr",
  ".last-point-card min-height": "42px",
  ".last-point-card padding": "6px 10px",
  ".last-point-card row-gap": "3px",
  ".mini-btn height": "36px",
  ".mini-btn min-width": "36px",
  ".modal max-height": "min(90dvh, 720px)",
  ".pill border-radius": "999px",
  ".pill min-height": "36px",
  ".pill padding": "0 12px",
  ".primary-btn border-radius": "14px",
  ".primary-btn height": "34px",
  ".primary-btn min-height": "34px",
  ".round-chip border-radius": "12px",
  ".round-chip min-width": "58px",
  ".round-chip-head padding": "4px 0",
  ".round-chip-score padding": "6px 0",
  ".score-box border-radius": "18px",
  ".score-box min-height": "116px",
  ".score-box padding": "0 10px",
  ".score-boxes gap": "8px",
  ".scoreboards gap": "8px",
  ".team-card border-radius": "var(--radius)",
  ".team-card min-height": null,
  ".team-card padding": "10px",
  ".team-player line-height": "1.1",
  ".team-player2 line-height": "1.1",
}
`;

exports[`type scale > renders at the expected sizes on phone large 430x932 1`] = `
{
  ".brand-sub": 9,
  ".brand-title": 17,
  ".entry-btn-kind": 8,
  ".entry-btn-num": 40,
  ".entry-label": 9,
  ".last-point-label": 8,
  ".last-point-name": 30,
  ".last-point-value": 30,
  ".primary-btn": 13,
  ".round-chip-head": 9,
  ".round-chip-score": 13,
  ".score-box": 125,
  ".section-title": 10,
  ".stat-label": 7,
  ".stat-value": 12,
  ".team-player": 32,
  ".team-player2": 24,
}
`;

exports[`type scale > renders at the expected sizes on phone short 390x760 1`] = `
{
  ".brand-sub": 8,
  ".brand-title": 15,
  ".entry-btn-kind": 8,
  ".entry-btn-num": 33,
  ".entry-label": 9,
  ".last-point-label": 7,
  ".last-point-name": 27,
  ".last-point-value": 27,
  ".primary-btn": 13,
  ".round-chip-head": 9,
  ".round-chip-score": 13,
  ".score-box": 106,
  ".section-title": 9,
  ".stat-label": 7,
  ".stat-value": 12,
  ".team-player": 29,
  ".team-player2": 22,
}
`;

exports[`type scale > renders at the expected sizes on phone tall 390x844 1`] = `
{
  ".brand-sub": 9,
  ".brand-title": 17,
  ".entry-btn-kind": 8,
  ".entry-btn-num": 36,
  ".entry-label": 9,
  ".last-point-label": 8,
  ".last-point-name": 30,
  ".last-point-value": 30,
  ".primary-btn": 13,
  ".round-chip-head": 9,
  ".round-chip-score": 13,
  ".score-box": 113,
  ".section-title": 10,
  ".stat-label": 7,
  ".stat-value": 12,
  ".team-player": 32,
  ".team-player2": 24,
}
`;

exports[`type scale > renders at the expected sizes on small phone 360x640 1`] = `
{
  ".brand-sub": 8,
  ".brand-title": 15,
  ".entry-btn-kind": 8,
  ".entry-btn-num": 30,
  ".entry-label": 9,
  ".last-point-label": 7,
  ".last-point-name": 26,
  ".last-point-value": 26,
  ".primary-btn": 13,
  ".round-chip-head": 9,
  ".round-chip-score": 13,
  ".score-box": 94,
  ".section-title": 9,
  ".stat-label": 7,
  ".stat-value": 12,
  ".team-player": 28,
  ".team-player2": 21,
}
`;

exports[`type scale > renders at the expected sizes on tablet 768x1024 1`] = `
{
  ".brand-sub": 11,
  ".brand-title": 20,
  ".entry-btn-kind": 13,
  ".entry-btn-num": 46,
  ".entry-label": 12,
  ".last-point-label": 9,
  ".last-point-name": 17,
  ".last-point-value": 18,
  ".primary-btn": 15,
  ".round-chip-head": 10,
  ".round-chip-score": 15,
  ".score-box": 116,
  ".section-title": 11,
  ".stat-label": 7,
  ".stat-value": 14,
  ".team-player": 20,
  ".team-player2": 17,
}
`;
